<resources>
    <string name="app_name">Chec Nutrition App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My CHEC App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_your_week">Your Week</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_favs">Favorites</string>
    <string name="menu_order_history">Order History</string>


    <integer name="test">10</integer>
    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
    </string-array>

    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="description">A meal being offered</string>
    <string name="alert">Plan your week!</string>

    <string name="ing_label">Ingredients</string>
    <string name="ing_cont">- Sample Ingredient #1</string>

    <string name="sample_meal_desc">This delicious meal is sure to make you feel great while also filling your stomach! Try it today. If not, I\'m sure there are plenty of other offerings we can provide for you.</string>


    <string name="nut_title">Nutrition Facts</string>
    <string name="nut1">Calories (kcal): </string>
    <string name="nut2">Total Fat: </string>
    <string name="nut3">Saturated Fat: </string>
    <string name="nut4">Trans Fat: </string>
    <string name="nut5">Monounsaturated Fat: </string>
    <string name="nut6">Polyunsaturated Fat: </string>
    <string name="nut7">Omega 3: </string>
    <string name="nut8">Omega 6: </string>
    <string name="nut9">Cholesterol: </string>
    <string name="nut10">Total Carbohydrates: </string>
    <string name="nut11">Dietary Fiber: </string>
    <string name="nut12">Sugars: </string>
    <string name="nut13">Protein: </string>


    <string name="proc_tit">Meal Procedure</string>
    <string name="proc_head">Preparation</string>

    <string name="allerg_tit">Allergen Information</string>
    <string name="allerg_head">Known allergens</string>
    <string name="allerg_sample">- Nuts [X]\n- Dairy [ ]\n- Egg [X]\n- Fish [ ]\n- Mustard [ ]\n- Shellfish [ ]\n- Wheat [X]</string>
    <string name="allerg_notice">It is important you do not consume food containing allergens if you are prone to allergic reactions.\n\nContact a medical professional for advice if you are unsure before selecting a meal.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

