<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_week"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_your_week" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_user_profile" />
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favs" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_order_history" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_menu_send"
            android:title="Queue" />
    </group>

</menu>
